--- a/templates/Home/index.html.twig
+++ b/templates/Home/index.html.twig
@@ -16,7 +16,7 @@
                     <p><small>{{ post.author }}</small></p>
 
                     <button type="button" class="btn btn-primary btn-sm">
-                        <a href="{{ path('single_article', {'id' : post.id}) }}">Read More</a>
+                        <a href="{{ path('single_article', {'id' : post.id}) }}"></a>
                     </button>
 
                 </div>
